Implement trino spooled segments streaming over arrow flight