@@ -2,6 +2,8 @@ package io.github.koszti.trinoarrowgateway.trino;
 
 import io.github.koszti.trinoarrowgateway.config.GatewayTrinoProperties;
 import io.github.koszti.trinoarrowgateway.trino.dto.TrinoStatementResponse;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.arrow.vector.types.FloatingPointPrecision;
 import org.apache.arrow.vector.types.pojo.ArrowType;
 import org.apache.arrow.vector.types.pojo.Field;
@@ -12,10 +14,14 @@ import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestClient;
 
-import java.util.Collections;
+import java.net.URI;
+import java.util.Comparator;
 import java.util.List;
+import java.util.LinkedHashMap;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,11 +31,14 @@ public class TrinoClientImpl implements TrinoClient
 
     private final RestClient restClient;
     private final GatewayTrinoProperties trinoProps;
+    private final ObjectMapper objectMapper;
 
     public TrinoClientImpl(RestClient trinoRestClient,
-            GatewayTrinoProperties trinoProps) {
+            GatewayTrinoProperties trinoProps,
+            ObjectMapper objectMapper) {
         this.restClient = trinoRestClient;
         this.trinoProps = trinoProps;
+        this.objectMapper = objectMapper;
     }
 
     @Override
@@ -38,10 +47,20 @@ public class TrinoClientImpl implements TrinoClient
 
         log.debug("Submitting query to Trino: {}", sql);
 
-        TrinoStatementResponse response = restClient
+        Map<String, TrinoQueryHandle.TrinoSpoolSegment> segmentsByUri = new LinkedHashMap<>();
+        String spoolEncoding = null;
+
+        var request = restClient
                 .post()
                 .uri("/v1/statement")
-                .header("X-Trino-User", trinoProps.getUser())
+                .header("X-Trino-User", trinoProps.getUser());
+
+        String queryDataEncoding = trinoProps.getQueryDataEncoding();
+        if (queryDataEncoding != null && !queryDataEncoding.isBlank()) {
+            request = request.header("X-Trino-Query-Data-Encoding", queryDataEncoding);
+        }
+
+        TrinoStatementResponse response = request
                 .body(sql)
                 .retrieve()
                 .body(TrinoStatementResponse.class);
@@ -52,6 +71,7 @@ public class TrinoClientImpl implements TrinoClient
 
         String queryId = response.getId();
         String state = response.getStats() != null ? response.getStats().getState() : null;
+        spoolEncoding = updateSpoolState(response, segmentsByUri, spoolEncoding);
 
         // Follow nextUri chain until FINISHED or FAILED/CANCELED
         int maxIterations = 10_000;   // safety guard
@@ -95,6 +115,7 @@ public class TrinoClientImpl implements TrinoClient
             }
 
             state = response.getStats() != null ? response.getStats().getState() : null;
+            spoolEncoding = updateSpoolState(response, segmentsByUri, spoolEncoding);
 
             // Optional: avoid hammering Trino too hard
             if (!"FINISHED".equalsIgnoreCase(state)) {
@@ -108,22 +129,93 @@ public class TrinoClientImpl implements TrinoClient
         }
 
         // At this point we consider the query FINISHED.
-        List<TrinoQueryHandle.TrinoColumn> cols =
-                response.getColumns() == null
-                        ? Collections.emptyList()
-                        : response.getColumns().stream()
-                        .map(c -> new TrinoQueryHandle.TrinoColumn(
-                                c.getName(),
-                                c.getType()
-                        ))
-                        .collect(Collectors.toList());
+        List<TrinoStatementResponse.Column> columns =
+                response.getColumns() == null ? List.of() : response.getColumns();
 
-        Schema arrowSchema = toArrowSchema(response.getColumns());
+        List<TrinoQueryHandle.TrinoColumn> cols = columns.stream()
+                .map(c -> new TrinoQueryHandle.TrinoColumn(
+                        c.getName(),
+                        c.getType()
+                ))
+                .collect(Collectors.toList());
 
-        TrinoQueryHandle handle = new TrinoQueryHandle(response.getId(), cols, arrowSchema);
+        Schema arrowSchema = toArrowSchema(columns);
 
-        log.info("Submitted Trino query. id={}, columns={}", handle.getQueryId(), cols.size());
+        List<TrinoQueryHandle.TrinoSpoolSegment> segments = segmentsByUri.values().stream()
+                .sorted(Comparator
+                        .comparingLong((TrinoQueryHandle.TrinoSpoolSegment s) -> Optional.ofNullable(s.rowOffset()).orElse(Long.MAX_VALUE))
+                        .thenComparing(s -> s.uri() != null ? s.uri().toString() : ""))
+                .toList();
+
+        TrinoQueryHandle handle = new TrinoQueryHandle(response.getId(), cols, arrowSchema, spoolEncoding, segments);
+
+        log.info("Submitted Trino query. id={}, columns={}, spooledSegments={}",
+                handle.getQueryId(), cols.size(), segments.size());
         return handle;
+    }
+
+    private String updateSpoolState(TrinoStatementResponse response,
+            Map<String, TrinoQueryHandle.TrinoSpoolSegment> segmentsByUri,
+            String spoolEncoding) {
+        if (response == null || response.getData() == null) {
+            return spoolEncoding;
+        }
+
+        JsonNode dataNode = response.getData();
+        if (dataNode == null || !dataNode.isObject()) {
+            // Inline results typically have "data" as an array-of-arrays; ignore here.
+            return spoolEncoding;
+        }
+
+        TrinoStatementResponse.Data spoolData;
+        try {
+            spoolData = objectMapper.treeToValue(dataNode, TrinoStatementResponse.Data.class);
+        } catch (Exception e) {
+            log.warn("Unable to parse spooled data object from Trino response: {}", e.toString());
+            return spoolEncoding;
+        }
+
+        if (spoolData.getEncoding() != null && !spoolData.getEncoding().isBlank()) {
+            spoolEncoding = spoolData.getEncoding();
+        }
+
+        if (spoolData.getSegments() == null || spoolData.getSegments().isEmpty()) {
+            return spoolEncoding;
+        }
+
+        for (TrinoStatementResponse.Segment s : spoolData.getSegments()) {
+            if (s == null || s.getUri() == null || s.getUri().isBlank()) {
+                continue;
+            }
+
+            URI uri;
+            URI ackUri;
+            try {
+                uri = URI.create(s.getUri());
+                ackUri = s.getAckUri() != null && !s.getAckUri().isBlank() ? URI.create(s.getAckUri()) : null;
+            } catch (IllegalArgumentException e) {
+                log.warn("Skipping invalid spooled segment URI(s): uri='{}' ackUri='{}'", s.getUri(), s.getAckUri());
+                continue;
+            }
+
+            Long rowOffset = s.getMetadata() != null ? s.getMetadata().getRowOffset() : null;
+            Long rowsCount = s.getMetadata() != null ? s.getMetadata().getRowsCount() : null;
+            Long segmentSize = s.getMetadata() != null ? s.getMetadata().getSegmentSize() : null;
+            String expiresAt = s.getMetadata() != null ? s.getMetadata().getExpiresAt() : null;
+            String type = s.getType();
+
+            segmentsByUri.putIfAbsent(uri.toString(), new TrinoQueryHandle.TrinoSpoolSegment(
+                    uri,
+                    ackUri,
+                    rowOffset,
+                    rowsCount,
+                    segmentSize,
+                    expiresAt,
+                    type
+            ));
+        }
+
+        return spoolEncoding;
     }
 
     private Schema toArrowSchema(List<TrinoStatementResponse.Column> columns) {
